<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/car" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:text="@string/topmenu4"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:padding="20dp" >

        <TextView
            android:id="@+id/texth1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/input_desc"
            android:textColor="#757575"
            android:textSize="12dp" />

        <RelativeLayout
            android:id="@+id/relativeLayout21"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/texth1"
            android:layout_marginTop="20dp"
            android:background="@drawable/backbd"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/input_totaldis" />

            <EditText
                android:id="@+id/editkilo"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="number" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout22"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/relativeLayout21"
            android:layout_below="@+id/relativeLayout21"
            android:layout_marginTop="10dp"
            android:background="@drawable/backbd"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/input_oilliterwon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editliter"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:ems="10"
                android:inputType="number" />
        </RelativeLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="goviewlog"
            android:text="@string/input_viewlog" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editliter"
            android:layout_below="@+id/relativeLayout22"
            android:layout_marginTop="10dp"
            android:onClick="editok"
            android:text="@string/input_save" />


    </RelativeLayout>

</RelativeLayout>