<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/car" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true" >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:scaleType="fitXY"
            android:src="@drawable/head" />

        <TextView
            android:id="@+id/textViewh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:text="@string/topmenu1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:padding="20dp" >

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button1"
            android:layout_alignLeft="@+id/button1"
            android:layout_marginBottom="8dp"
            android:onClick="smsFilter"
            android:text="@string/oiling_menu4" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:onClick="recordlist"
            android:text="@string/oiling_menu3" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button3"
            android:layout_alignLeft="@+id/button3"
            android:layout_marginBottom="8dp"
            android:onClick="monthchart"
            android:text="@string/oiling_menu2" />

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button2"
            android:layout_alignLeft="@+id/button2"
            android:layout_marginBottom="8dp"
            android:onClick="oilinfoadd"
            android:text="@string/oilinput_add" />

        <RelativeLayout
            android:id="@+id/relativeLayout21"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/backbd"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/oiltotal_totalwon" />

            <TextView
                android:id="@+id/oiltotal_totalwon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:text=" " />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout22"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/relativeLayout21"
            android:layout_below="@+id/relativeLayout21"
            android:layout_marginTop="8dp"
            android:background="#ffffffff"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/oiltotal_totalnum"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/oiltotal_totalnum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView3"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignRight="@+id/imageView1"
                android:layout_marginRight="8dp"
                android:text="총주?�횟??"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout23"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/relativeLayout22"
            android:layout_below="@+id/relativeLayout22"
            android:layout_marginTop="8dp"
            android:background="#ffffffff"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/oiltotal_everwon"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/oiltotal_everwon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView5"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignRight="@+id/imageView1"
                android:layout_marginRight="8dp"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout24"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/relativeLayout23"
            android:layout_below="@+id/relativeLayout23"
            android:layout_marginTop="8dp"
            android:background="#ffffffff"
            android:padding="1dp" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/imageView1"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:text="@string/oiltotal_firstrec"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/oiltotal_lastrec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView7"
                android:layout_alignBottom="@+id/textView7"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:text="첫주??"
                android:textAppearance="?android:attr/textAppearanceMedium" />
 
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/oiltotal_lastrec"
                android:layout_toLeftOf="@+id/oiltotal_lastrec"
                android:text="~" />

            <TextView
                android:id="@+id/oiltotal_firstrec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_toLeftOf="@+id/textView2"
                android:text="마�?막주??"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>