<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="0dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/backbd"
        android:padding="8dp" >

        <TextView
            android:id="@+id/repaire_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="12.12.12"
            android:textColor="#4169e1"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/repair_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/repaire_name"
            android:gravity="center_vertical"
            android:text="5000km" />

        <TextView
            android:id="@+id/repair_pretime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/repair_period"
            android:text="6000km"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/repair_nextkilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/repair_pretime"
            android:text="10000kn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/repair_period"
            android:layout_toLeftOf="@+id/repair_period"
            android:text="@string/repair_period"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/repair_pretime"
            android:layout_toLeftOf="@+id/repair_pretime"
            android:text="@string/repair_prerecord"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/repair_nextkilo"
            android:layout_toLeftOf="@+id/repair_nextkilo"
            android:text="@string/repair_plan"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</RelativeLayout>